apps/changedetection/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "changedetection"
spec:
  ports:
    - port: 80
      targetPort: "changedetection"
  selector:
    app: "changedetection"
