apps/changedetection/networkpolicy.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "changedetection"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "changedetection"
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: "TCP"
          port: "changedetection"
      from: []
